--- a/package.json
+++ b/package.json
@@ -38,7 +38,12 @@
     "isbot": "^3.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tiny-invariant": "^1.2.0"
+    "tiny-invariant": "^1.2.0",
+    "d3-color": "^2.0.0",
+    "d3-scale": "^3.2.3",
+    "d3-scale-chromatic": "^2.0.0",
+    "d3-shape": "^2.0.0",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
