--- a/package.json
+++ b/package.json
@@ -35,15 +35,15 @@
     "@remix-run/serve": "^1.7.4",
     "@remix-run/server-runtime": "^1.7.4",
     "bcryptjs": "^2.4.3",
-    "isbot": "^3.5.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tiny-invariant": "^1.2.0",
     "d3-color": "^2.0.0",
     "d3-scale": "^3.2.3",
     "d3-scale-chromatic": "^2.0.0",
     "d3-shape": "^2.0.0",
-    "styled-components": "^4.3.2"
+    "isbot": "^3.5.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "styled-components": "^4.4.1",
+    "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
@@ -59,6 +59,7 @@
     "@types/node": "^18.7.18",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.1.0",
     "@vitest/coverage-c8": "^0.23.4",
     "autoprefixer": "^10.4.11",
