--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "isbot": "^3.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "styled-components": "^4.4.1",
     "tiny-invariant": "^1.2.0"
   },
