--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "fuse.js": "^6.4.6",
     "styled-components": "^4.4.1",
     "tiny-invariant": "^1.2.0"
   },
