--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
     "d3-scale": "^3.2.3",
     "d3-scale-chromatic": "^2.0.0",
     "d3-shape": "^2.0.0",
+    "fuse.js": "^6.4.6",
     "isbot": "^3.5.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
-    "fuse.js": "^6.4.6",
     "styled-components": "^4.4.1",
     "tiny-invariant": "^1.2.0"
   },
